[gd_scene load_steps=4 format=2]

[ext_resource path="res://ItemModsControl.gd" type="Script" id=1]
[ext_resource path="res://ItemTooltip.tscn" type="PackedScene" id=2]
[ext_resource path="res://InventoryList.tscn" type="PackedScene" id=3]

[node name="ItemMods" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemTooltip" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 0.0
margin_right = 200.0
margin_bottom = 0.0

[node name="ItemSlots" type="ItemList" parent="."]
anchor_bottom = 1.0
margin_left = 208.927
margin_right = 396.927
custom_constants/vseparation = 12
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false ]
allow_reselect = true
auto_height = true
icon_scale = 2.0
fixed_icon_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModList" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 406.93
margin_top = 0.0
margin_right = 600.0
allow_reselect = true

[node name="ModTooltip" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 612.0
margin_right = 800.0
margin_bottom = 0.0

[node name="EquipButton" type="Button" parent="ModTooltip"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -52.0
margin_right = -10.0
margin_bottom = -10.0
text = "Equip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveButton" type="Button" parent="ModTooltip"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -106.0
margin_right = -10.0
margin_bottom = -59.0
text = "Remove"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="ItemSlots" to="." method="_on_slot_selected"]
[connection signal="item_selected" from="ModList" to="." method="_on_mod_selected"]
[connection signal="button_up" from="ModTooltip/EquipButton" to="." method="_on_equip_button_up"]
[connection signal="button_up" from="ModTooltip/RemoveButton" to="." method="_on_remove_button_up"]
